--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,28 +7,28 @@ networks:
 services:
 
   service:
-    container_name: service
-    hostname: service
+    container_name: projectmanagement_service
+    hostname: projectmanagement_service
     build:
       dockerfile: Dockerfile
       context: './service'
-    image: ${IMAGE_HOST}/${SERVICE_PROJECT}/products:${IMAGE_VERSION}
+    image: ${IMAGE_HOST}/${SERVICE_PROJECT}${SERVICE_PATH}:${SERVICE_IMAGE_VERSION}
     env_file:
       - .env.service
     ports:
       - 9000:9000
 
   client:
-    container_name: client
-    hostname: client
+    container_name: projectmanagement_client
+    hostname: projectmanagement_client
     build:
       dockerfile: Dockerfile
       context: './client'
       args:
-        - NPM_REGISTRY_URL=${NPM_REGISTRY_URL}
+        - NPM_REGISTRY=${NPM_REGISTRY}
         - NODE_ENV=${NODE_ENV}
         - APP_PRODUCTS_URL=${APP_PRODUCTS_URL}
-    image: ${IMAGE_HOST}/${CLIENT_PROJECT}/products:${IMAGE_VERSION}
+    image: ${IMAGE_HOST}/${CLIENT_PROJECT}${SERVICE_PATH}:${CLIENT_IMAGE_VERSION}
     env_file:
       - .env.client
     ports:
